# gensec-1

./: .coverage  .coveragerc  .gitignore  CHANGELOG_v0.2.0.md  CHANGELOG_v0_3_0.md  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  NOTICE  README.md  SIGN_CONVENTION_MIGRATION.md  benchmark_numba_lazy_all_examples.ps1  generate_version.py  gensec_mx_my.prof  gettree.py  lazy_all_examples.ps1  lazy_preparefor_git.ps1  profile_gensec.py  pyproject.toml  setup_licensing.py  tree_output.txt
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
.github/workflows/: cla.yml
docs/: about.rst  changelog.rst  ci_and_versioning.rst  conf.py  developer.rst  index.rst
docs/_build/multiversion/doc/0.1/: .buildinfo  about.html  changelog.html  ci_and_versioning.html  developer.html  genindex.html  index.html  py-modindex.html  search.html
docs/_build/multiversion/doc/0.1/.doctrees/: about.doctree  changelog.doctree  ci_and_versioning.doctree  developer.doctree  environment.pickle  index.doctree
docs/_build/multiversion/doc/0.1/api/: gensec.cli.html  gensec.geometry.html  gensec.io_yaml.html  gensec.materials.html  gensec.output.html  gensec.solver.html  index.html
docs/_build/multiversion/doc/0.2/: .buildinfo  about.html  changelog.html  ci_and_versioning.html  developer.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/_templates/sidebar/: versioning.html
docs/api/: gensec.cli.rst  gensec.geometry.rst  gensec.io_yaml.rst  gensec.materials.rst  gensec.output.rst  gensec.solver.rst  index.rst
docs/architecture/: architecture_io.rst  architecture_overview.rst  architecture_solver.rst
docs/source/: gensec.geometry.rst  gensec.materials.rst  gensec.output.rst  gensec.solver.rst  modules.rst
docs/theory/: constitutive_laws.rst  demand_verification.rst  fiber_method.rst  ideal_gross_properties.rst  integration_methods.rst  nm_diagram.rst
docs/user_guide/: examples.rst  installation.rst  quickstart.rst  sign_conventions.rst  yaml_reference.rst
esempi_miei/: P60-60_1.yaml  P60-60_2.yaml  Pannello_187x30.yaml  Pannello_187x30_2.yaml  Pannello_30x187.yaml  Verifiche.xlsx
examples/: P60-60_1.yaml  Pannello_187x30.yaml  Pannello_30x187.yaml  biaxial_column.yaml  example_annulus.yaml  example_biaxial_column.yaml  example_custom.yaml  example_input.yaml  example_tee.yaml  example_v2.1.yaml  example_v2_1.yaml  test_exotic.yaml  vcaslu_1.yaml  yaml_reference_example.yaml
src/: todo_postit.txt
src/gensec/: __init__.py  __main__.py  _about.py  _version.py  api.py  cli.py  io_yaml.py  server.py
src/gensec/geometry/: __init__.py  fiber.py  geometry.py  primitives.py  properties.py  section.py
src/gensec/materials/: __init__.py  base.py  concrete.py  ec2_bridge.py  ec2_properties.py  en10025_properties.py  steel.py  tabulated.py
src/gensec/output/: __init__.py  export.py  geometry_plot.py  plots.py  report.py
src/gensec/solver/: __init__.py  capacity.py  check.py  integrator.py
tests/: test_api.py  test_capacity_v2.py  test_check.py  test_infrastructure.py  test_materials.py  test_properties.py  test_server.py  test_solver_biaxial.py  test_solver_uniaxial.py  test_v030_regressions.py
validazione/: Dati_AS.docx
web/: index.html
web/js/: api.js  app.jsx  data.jsx  panels.jsx  plots.jsx  tweaks.jsx
(+93 files in other folders)
